--- a/miniProject/unionsqlinjection.html
+++ b/miniProject/unionsqlinjection.html
@@ -21,6 +21,7 @@
             </form>
             <div id="unionSqlOutput"></div>
         </section>
+        <a href="#" onclick="history.back()">뒤로 가기</a>
     </div>
     <script src="script.js"></script>
 </body>
